This is the Changelog for GregTech6-Unofficial
6.13.11: (Not released yet).
Nothing

6.13.10: (Not released yet).
Nothing

6.13.09: (Not released yet).
Nothing

6.13.08 (Not released yet).
[FIXED]Producing too many gem plates from gems in laser cutter.
[FIXED]Chromium production now is balanced correctly in GT manner.
[FIXED]Polytetrafluoroethylene Pipes not able to handle acids.

6.13.07:
[FIXED]Now Titanium Niobium Carbide Steam Turbine Main Housing has the correct crafting recipe.
[FIXED]The tooltip of the Mask Aligner has been fixed. The input should be from bottom layer and the output otherwise.
[FIXED]The tooltip of the Large Molecular Scanner has been fixed. The structure should not be filled with air.
[FIXED]The tooltip of the Industrial Coke Oven.
[FIXED]Same crafting recipes for Industrial Coke Oven and Large Roasting Oven main blocks.
[FIXED]Partcile Collider construction is now possible.
[CHANGED]Now Industrial Coke Oven, Large Roasting Oven, and Large Dyers can input and output fluids or items at any walls.
[CHANGED]Aligner Units and Mask Aligner crafting recipes.
[CHANGED]Now Circuit Wiring (Platinum) are made in Mask Aligner.
[CHANGED]Now Fluid Solidifiers accept CU instead of EU. (And its appearance changed!)
[CHANGED]Some recipes are now processed in heat mixers instead of mixers.
[CHANGED]Chromium can no longer be obtained by melting or electrolysing chromite.
[CHANGED]Alumina now has white texture.
[CHANGED]Redone GUI Textures of Circuit Assembler and Mask Aligner
[CHANGED]Changed some old recipes and added 50 new Fusion recipes.
[CHANGED]Increased the energy acceptance limit of Fusion Reactor and Mask Aligner
[ADDED]A whole new processing method of Chromium production is implemented.
To compensate the early-game loss of Chromium, small amount of Chromium can now be obtained from sluicing Chromite.
[ADDED]Heat Mixers (T1-T5)
[ADDED]Laser Cutters (T1-T5)
[ADDED]Polytetrafluoroethylene drum and pipes and its production.