@@ -38,7 +38,7 @@ public class Textures {
 		  VOID, RENDERING_ERROR
 		, LOGISTICS_WIRE, LOGISTICS_WIRE_OVERLAY, FIBER_WIRE, FIBER_WIRE_OVERLAY, PIPE_RESTRICTOR, INSULATION_BUNDLED, INSULATION_PRIVATE, INSULATION_FULL, INSULATION_TINY, INSULATION_SMALL, INSULATION_MEDIUM, INSULATION_LARGE, INSULATION_HUGE
 		, ASPHALT, CONCRETE, CONCRETE_REINFORCED, CFOAM_FRESH, CFOAM_HARDENED, CFOAM_FRESH_OWNED, CFOAM_HARDENED_OWNED, GLASS_CLEAR, CRATE, COIN, COIN_SIDE, COIN_TOP, COIN_BOTTOM
-		, FLUID_SPRING, GREG_O_LANTERN
+		, FLUID_SPRING, GREG_O_LANTERN, FLUID_WELL
 		
 		, ZPM_TOP, ZPM_SIDES, ZPM_BOTTOM
 		, DUCT_TAPE
